// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PanelAccordion /> should renders PanelAccordion with props correctly 1`] = `
<div
  className="col-xs-12 col-sm-6"
>
  <div
    className="ui-sub-section"
  >
    <div
      className="ui-sub-title"
    >
      Panel accordion
    </div>
    <div
      className="panel-group accordion"
    >
      <div
        className="panel panel-secondary"
      >
        <div
          className="panel-heading"
        >
          <div
            className="control-group right"
          >
            <button
              className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
              onClick={[Function]}
              type="button"
            >
              <i
                className="btn-icon fa fa-chevron-up"
              />
            </button>
          </div>
          <h3
            className="panel-title"
          >
            Panel title 1
          </h3>
        </div>
        <div
          className="panel-body"
        >
          <div
            className="ui-panel-content"
          >
            Panel Content 1
          </div>
          <div
            className="panel-control"
          >
            <div
              className="wrap-control-group hide-indent-bottom"
            >
              <div
                className="control-group with-indent right"
              >
                <button
                  className="btn btn-success btn-inverse btn-create"
                >
                  <i
                    className="btn-icon fa fa-plus"
                  />
                   
                  <span
                    className="btn-text"
                  >
                    Create
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="panel panel-secondary"
      >
        <div
          className="panel-heading"
        >
          <div
            className="control-group right"
          >
            <button
              className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
              onClick={[Function]}
            >
              <i
                className="btn-icon fa fa-chevron-up"
              />
            </button>
          </div>
          <h3
            className="panel-title"
          >
            Panel title 2
          </h3>
        </div>
        <div
          className="panel-body"
        >
          <div
            className="ui-panel-content"
          >
            Panel Content 2
          </div>
          <div
            className="panel-control"
          >
            <div
              className="wrap-control-group hide-indent-bottom"
            >
              <div
                className="control-group with-indent right"
              >
                <button
                  className="btn btn-success btn-inverse btn-create"
                >
                  <i
                    className="btn-icon fa fa-plus"
                  />
                   
                  <span
                    className="btn-text"
                  >
                    Create
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PanelAccordion /> should renders PanelAccordion with props correctly 2`] = `
<div
  className="col-xs-12 col-sm-6"
>
  <div
    className="ui-sub-section"
  >
    <div
      className="ui-sub-title"
    >
      Panel accordion
    </div>
    <div
      className="panel-group accordion"
    >
      <div
        className="panel panel-secondary open"
      >
        <div
          className="panel-heading"
        >
          <div
            className="control-group right"
          >
            <button
              className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
              onClick={[Function]}
              type="button"
            >
              <i
                className="btn-icon fa fa-chevron-up"
              />
            </button>
          </div>
          <h3
            className="panel-title"
          >
            Panel title 1
          </h3>
        </div>
        <div
          className="panel-body"
        >
          <div
            className="ui-panel-content"
          >
            Panel Content 1
          </div>
          <div
            className="panel-control"
          >
            <div
              className="wrap-control-group hide-indent-bottom"
            >
              <div
                className="control-group with-indent right"
              >
                <button
                  className="btn btn-success btn-inverse btn-create"
                >
                  <i
                    className="btn-icon fa fa-plus"
                  />
                   
                  <span
                    className="btn-text"
                  >
                    Create
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="panel panel-secondary"
      >
        <div
          className="panel-heading"
        >
          <div
            className="control-group right"
          >
            <button
              className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
              onClick={[Function]}
            >
              <i
                className="btn-icon fa fa-chevron-up"
              />
            </button>
          </div>
          <h3
            className="panel-title"
          >
            Panel title 2
          </h3>
        </div>
        <div
          className="panel-body"
        >
          <div
            className="ui-panel-content"
          >
            Panel Content 2
          </div>
          <div
            className="panel-control"
          >
            <div
              className="wrap-control-group hide-indent-bottom"
            >
              <div
                className="control-group with-indent right"
              >
                <button
                  className="btn btn-success btn-inverse btn-create"
                >
                  <i
                    className="btn-icon fa fa-plus"
                  />
                   
                  <span
                    className="btn-text"
                  >
                    Create
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PanelAccordion /> should renders PanelAccordion with props correctly 3`] = `
<div
  className="col-xs-12 col-sm-6"
>
  <div
    className="ui-sub-section"
  >
    <div
      className="ui-sub-title"
    >
      Panel accordion
    </div>
    <div
      className="panel-group accordion"
    >
      <div
        className="panel panel-secondary"
      >
        <div
          className="panel-heading"
        >
          <div
            className="control-group right"
          >
            <button
              className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
              onClick={[Function]}
              type="button"
            >
              <i
                className="btn-icon fa fa-chevron-up"
              />
            </button>
          </div>
          <h3
            className="panel-title"
          >
            Panel title 1
          </h3>
        </div>
        <div
          className="panel-body"
        >
          <div
            className="ui-panel-content"
          >
            Panel Content 1
          </div>
          <div
            className="panel-control"
          >
            <div
              className="wrap-control-group hide-indent-bottom"
            >
              <div
                className="control-group with-indent right"
              >
                <button
                  className="btn btn-success btn-inverse btn-create"
                >
                  <i
                    className="btn-icon fa fa-plus"
                  />
                   
                  <span
                    className="btn-text"
                  >
                    Create
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="panel panel-secondary open"
      >
        <div
          className="panel-heading"
        >
          <div
            className="control-group right"
          >
            <button
              className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
              onClick={[Function]}
            >
              <i
                className="btn-icon fa fa-chevron-up"
              />
            </button>
          </div>
          <h3
            className="panel-title"
          >
            Panel title 2
          </h3>
        </div>
        <div
          className="panel-body"
        >
          <div
            className="ui-panel-content"
          >
            Panel Content 2
          </div>
          <div
            className="panel-control"
          >
            <div
              className="wrap-control-group hide-indent-bottom"
            >
              <div
                className="control-group with-indent right"
              >
                <button
                  className="btn btn-success btn-inverse btn-create"
                >
                  <i
                    className="btn-icon fa fa-plus"
                  />
                   
                  <span
                    className="btn-text"
                  >
                    Create
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PanelSubAccordion /> should renders PanelSubAccordion with props correctly 1`] = `
<div
  className="col-xs-12 col-sm-6"
>
  <div
    className="ui-sub-section"
  >
    <div
      className="ui-sub-title"
    >
      Panel sub-accordion
    </div>
    <div
      className="panel panel-secondary panel-subaccordion accordion"
    >
      <div
        className="panel-heading"
        onClick={[Function]}
      >
        <h3
          className="panel-title"
        >
          Panel title 1
        </h3>
      </div>
      <div
        className="panel-body"
      >
        <div
          className="ui-panel-content"
        >
          Panel Content 1
        </div>
        <div
          className="panel-control"
        >
          <div
            className="wrap-control-group hide-indent-bottom"
          >
            <div
              className="control-group with-indent right"
            >
              <button
                className="btn btn-success btn-inverse btn-create"
              >
                <i
                  className="btn-icon fa fa-plus"
                />
                 
                <span
                  className="btn-text"
                >
                  Create
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="panel panel-secondary panel-subaccordion accordion"
    >
      <div
        className="panel-heading"
        onClick={[Function]}
      >
        <h3
          className="panel-title"
        >
          Panel title 2
        </h3>
      </div>
      <div
        className="panel-body"
      >
        <div
          className="ui-panel-content"
        >
          Panel Content 2
        </div>
        <div
          className="panel-control"
        >
          <div
            className="wrap-control-group hide-indent-bottom"
          >
            <div
              className="control-group with-indent right"
            >
              <button
                className="btn btn-success btn-inverse btn-create"
              >
                <i
                  className="btn-icon fa fa-plus"
                />
                 
                <span
                  className="btn-text"
                >
                  Create
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PanelSubAccordion /> should renders PanelSubAccordion with props correctly 2`] = `
<div
  className="col-xs-12 col-sm-6"
>
  <div
    className="ui-sub-section"
  >
    <div
      className="ui-sub-title"
    >
      Panel sub-accordion
    </div>
    <div
      className="panel panel-secondary panel-subaccordion accordion open"
    >
      <div
        className="panel-heading"
        onClick={[Function]}
      >
        <h3
          className="panel-title"
        >
          Panel title 1
        </h3>
      </div>
      <div
        className="panel-body"
      >
        <div
          className="ui-panel-content"
        >
          Panel Content 1
        </div>
        <div
          className="panel-control"
        >
          <div
            className="wrap-control-group hide-indent-bottom"
          >
            <div
              className="control-group with-indent right"
            >
              <button
                className="btn btn-success btn-inverse btn-create"
              >
                <i
                  className="btn-icon fa fa-plus"
                />
                 
                <span
                  className="btn-text"
                >
                  Create
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="panel panel-secondary panel-subaccordion accordion"
    >
      <div
        className="panel-heading"
        onClick={[Function]}
      >
        <h3
          className="panel-title"
        >
          Panel title 2
        </h3>
      </div>
      <div
        className="panel-body"
      >
        <div
          className="ui-panel-content"
        >
          Panel Content 2
        </div>
        <div
          className="panel-control"
        >
          <div
            className="wrap-control-group hide-indent-bottom"
          >
            <div
              className="control-group with-indent right"
            >
              <button
                className="btn btn-success btn-inverse btn-create"
              >
                <i
                  className="btn-icon fa fa-plus"
                />
                 
                <span
                  className="btn-text"
                >
                  Create
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PanelSubAccordion /> should renders PanelSubAccordion with props correctly 3`] = `
<div
  className="col-xs-12 col-sm-6"
>
  <div
    className="ui-sub-section"
  >
    <div
      className="ui-sub-title"
    >
      Panel sub-accordion
    </div>
    <div
      className="panel panel-secondary panel-subaccordion accordion"
    >
      <div
        className="panel-heading"
        onClick={[Function]}
      >
        <h3
          className="panel-title"
        >
          Panel title 1
        </h3>
      </div>
      <div
        className="panel-body"
      >
        <div
          className="ui-panel-content"
        >
          Panel Content 1
        </div>
        <div
          className="panel-control"
        >
          <div
            className="wrap-control-group hide-indent-bottom"
          >
            <div
              className="control-group with-indent right"
            >
              <button
                className="btn btn-success btn-inverse btn-create"
              >
                <i
                  className="btn-icon fa fa-plus"
                />
                 
                <span
                  className="btn-text"
                >
                  Create
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="panel panel-secondary panel-subaccordion accordion open"
    >
      <div
        className="panel-heading"
        onClick={[Function]}
      >
        <h3
          className="panel-title"
        >
          Panel title 2
        </h3>
      </div>
      <div
        className="panel-body"
      >
        <div
          className="ui-panel-content"
        >
          Panel Content 2
        </div>
        <div
          className="panel-control"
        >
          <div
            className="wrap-control-group hide-indent-bottom"
          >
            <div
              className="control-group with-indent right"
            >
              <button
                className="btn btn-success btn-inverse btn-create"
              >
                <i
                  className="btn-icon fa fa-plus"
                />
                 
                <span
                  className="btn-text"
                >
                  Create
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <Panels /> should renders Panels with props correctly 1`] = `
<div
  className="ui-section"
  id="panels"
>
  <strong
    className="ui-title"
  >
    Panels
  </strong>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-sm-6"
    >
      <div
        className="ui-sub-section"
      >
        <div
          className="ui-sub-title"
        >
          Panel primary
        </div>
        <div
          className="panel panel-primary"
        >
          <div
            className="panel-heading"
          >
            <div
              className="control-group right"
            >
              <button
                className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
              >
                <i
                  className="btn-icon fa fa-expand"
                />
                <i
                  className="btn-icon fa fa-compress"
                />
              </button>
            </div>
            <h3
              className="panel-title"
            >
              Panel title
            </h3>
          </div>
          <div
            className="panel-body"
          >
            <div
              className="ui-panel-content"
            >
              Panel Conten
            </div>
            <div
              className="panel-control"
            >
              <div
                className="wrap-control-group hide-indent-bottom"
              >
                <div
                  className="control-group with-indent right"
                >
                  <button
                    className="btn btn-success btn-inverse btn-create"
                  >
                    <i
                      className="btn-icon fa fa-plus"
                    />
                     
                    <span
                      className="btn-text"
                    >
                      Create
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-sm-6"
    >
      <div
        className="ui-sub-section"
      >
        <div
          className="ui-sub-title"
        >
          Panel secondary
        </div>
        <div
          className="panel panel-secondary"
        >
          <div
            className="panel-heading"
          >
            <div
              className="control-group right"
            >
              <button
                className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
              >
                <i
                  className="btn-icon fa fa-expand"
                />
                <i
                  className="btn-icon fa fa-compress"
                />
              </button>
            </div>
            <h3
              className="panel-title"
            >
              Panel title
            </h3>
          </div>
          <div
            className="panel-body"
          >
            <div
              className="ui-panel-content"
            >
              Panel Conten
            </div>
            <div
              className="panel-control"
            >
              <div
                className="wrap-control-group hide-indent-bottom"
              >
                <div
                  className="control-group with-indent right"
                >
                  <button
                    className="btn btn-success btn-inverse btn-create"
                  >
                    <i
                      className="btn-icon fa fa-plus"
                    />
                     
                    <span
                      className="btn-text"
                    >
                      Create
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-sm-6"
    >
      <div
        className="ui-sub-section"
      >
        <div
          className="ui-sub-title"
        >
          Panel secondary
        </div>
        <div
          className="panel panel-secondary"
        >
          <div
            className="panel-heading"
          >
            <div
              className="control-group right"
            >
              <button
                className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
              >
                <i
                  className="btn-icon fa fa-expand"
                />
                <i
                  className="btn-icon fa fa-compress"
                />
              </button>
            </div>
            <h3
              className="panel-title"
            >
              Panel title
            </h3>
          </div>
          <div
            className="panel-body"
          >
            <div
              className="panel-body-inner"
            >
              <div
                className="ui-panel-content"
              >
                Panel Conten
              </div>
            </div>
            <div
              className="panel-control"
            >
              <div
                className="wrap-control-group hide-indent-bottom"
              >
                <div
                  className="control-group with-indent right"
                >
                  <button
                    className="btn btn-success btn-inverse btn-create"
                  >
                    <i
                      className="btn-icon fa fa-plus"
                    />
                     
                    <span
                      className="btn-text"
                    >
                      Create
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-sm-6"
    >
      <div
        className="ui-sub-section"
      >
        <div
          className="ui-sub-title"
        >
          Panel small
        </div>
        <div
          className="panel panel-secondary panel-small"
        >
          <div
            className="panel-heading"
          >
            <h3
              className="panel-title"
            >
              Panel title
            </h3>
          </div>
          <div
            className="panel-body"
          >
            <div
              className="ui-panel-content"
            >
              Panel Conten
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <PanelAccordion />
    <PanelSubAccordion />
  </div>
</div>
`;
